fixed alignment issue with date headings

--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ header h1  {
     width: 300px;
     height: 300px;
     display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       flex-flow: column wrap;
     opacity: 3;
@@ -271,6 +271,10 @@ header h1  {
     justify-content: center;
     align-items: center;
     padding: 15px;
+}
+
+.day-grid-item h2 {
+    margin-top: 50px;
 }
 
 /*.highlight {
